# comfyui-metadata-booster

./: .comfyignore  .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: publish-node.yml
web/: dialog.js  hover-preview.js  media-target.js  menu.js  metadata-booster.js  metadata-service.js  settings.js  sidebar-browser.js  video-metadata.js
